implementação do angular no primeiro site

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,42 +1,4 @@
-<header>
-    <div class="logo">
-        <div class="items-logo">
-            <div class="espaco">
-                <div class="search-box" id="search-box">
-                    <input placeholder="Pesquisar" type="text" id="search">
-                </div>
-                <a id="search-icon" onclick="mostrarPesquisa()">
-                    <img class="search" src="/assets/img/search_img.png" alt="Search icon">
-                </a>
-            </div>
-            <img class="logo-text" src="/assets/img/LOGO.png" alt="logo">
-            <div class="icon-logo" id="icon-logo">
-                <a href="index.html">
-                    <img class="logo-icon" src="/assets/img/logo_icon.png" alt="logo">
-                </a>
-            </div>
-            <div class="menu-icon">
-                <a id="menu-icon" onclick="mostrarMenu()">
-                    <img src="/assets/img/menu_img.png" alt="Agrupamento dos itens do menu">
-                </a>
-
-            </div>
-            <div class="items-logo2" id="items-logo2">
-                <a class="menuLogin" routerLink="login" >Login</a>
-                <a class="menuCarrinho" href="carrinho.html">Meu Carrinho</a>
-            </div>
-        </div>
-    </div>
-    <div id="menu">
-        <a class="menuLogin2" href="login.html">Login</a>
-        <a class="menuCarrinho2" href="carrinho.html">Meu Carrinho</a>
-        <a class="menuDepartamentos" href="departamentos.html">Departamentos</a>
-        <a class="menuPromocoes" href="promocoes.html">Promoções</a>
-        <a class="menuNovidades" href="novidades.html">Novidades</a>
-        <a class="menuMembros" href="membro.html">Torne-se Membro</a>
-
-    </div>
-</header>
+<app-header></app-header>
 <div class="main">
     <div class="carrosel">
         <div data-js="banner-home" class="banner-home nintendo-controle bannerVisibility">
@@ -106,86 +68,4 @@
         </div>
     </div>
 </div>
-<footer class="footer" lang="pt-br">
-    <div class="items-footer" style="padding-top: 25px;">
-        <div class="coluna-footer-itens inst" id="inst">
-            <label for="coluna-footer-itens">
-                <h3>Institucional</h3>
-            </label>
-            <ul class="coluna-footer-itens-lista" id="inst2">
-                <li>
-                    <a>Nossa História</a>
-                </li>
-                <li>
-                    <a>No que acreditamos</a>
-                </li>
-                <li>
-                    <a>Sustentabilidade</a>
-                </li>
-                <li>
-                    <a>Trabalhe conosco</a>
-                </li>
-                <li>
-                    <a>Privacidade</a>
-                </li>
-            </ul>
-        </div>
-        <div class="coluna-footer-itens depart" id="depart">
-            <label for="coluna-footer-itens">
-                <h3>Departamentos</h3>
-            </label>
-            <ul class="coluna-footer-itens-lista" id="depart2">
-                <li>
-                    <a>Consoles</a>
-                </li>
-                <li>
-                    <a>Computadores</a>
-                </li>
-                <li>
-                    <a>Periféricos</a>
-                </li>
-                <li>
-                    <a>Hardware</a>
-                </li>
-                <li>
-                    <a>Jogos</a>
-                </li>
-            </ul>
-        </div>
-        <div class="coluna-footer-itens accou" id="accou">
-            <label for="coluna-footer-itens">
-                <h3>Minha Conta</h3>
-            </label>
-            <ul class="coluna-footer-itens-lista" id="accou2">
-                <li>
-                    <a>Meus Pedidos</a>
-                </li>
-                <li>
-                    <a>Recebimento de Novidades</a>
-                </li>
-            </ul>
-        </div>
-        <div class="coluna-footer-itens atend" id="atend">
-            <label for="coluna-footer-itens">
-                <h3>Atendimento</h3>
-            </label>
-            <ul class="coluna-footer-itens-lista" id="atend2">
-                <li>
-                    <a>SAC</a>
-                </li>
-                <li>
-                    <a>Horário de Atendimento</a>
-                </li>
-                <li>
-                    <a>Endereço</a>
-                </li>
-                <li>
-                    <a>E-mail</a>
-                </li>
-                <li>
-                    <a>Entre em contato</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</footer>
+<app-footer></app-footer>
