--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<app-header></app-header>
+<div class="main">
+    <div class="login-registration">
+        <div class="login">
+            <h2>JÁ TENHO UMA CONTA</h2>
+            <input placeholder="E-mail *" type="email" id="login-email">
+            <input placeholder="Senha *" type="password" id="login-password">
+            <input type="submit" class="button-account-login" value="LOGIN">
+        </div>
+        <div class="partition"></div>
+        <div class="account-creation">
+            <h2>QUERO ME CADASTRAR</h2>
+            <input placeholder="E-mail *" type="email" id="register-email">
+            <input placeholder="Crie sua senha *" type="password" id="register-password">
+            <input placeholder="Repita sua senha *" type="password" id="register-password-confirmation">
+            <input placeholder="CPF *" type="number" id="register-cpf">
+            <input placeholder="CEP *" type="number" id="register-cep">
+            <input type="submit" class="button-account-register" value="CADASTRAR">
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
