--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -1,11 +1,21 @@
-.login-registration{
+.login_page{
     max-width: 1463px;
     width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     margin: 50px auto;
-    padding-top: 40px;
+    padding-top: 40px; 
+}
+.login_page form{
+    display: flex;
+    max-width: 400px;
+    width: 100%;
+}
+.login-registration{
+    display: flex;
+    max-width: 400px;
+    width: 100%;
 }
 .login{
     max-width: 400px;
@@ -44,6 +54,7 @@
     max-width: 400px;
     width: 100%;
     height: 40px;
+    cursor: pointer;
 }
 .partition{
     width: 2px;
@@ -81,12 +92,14 @@
     max-width: 400px;
     width: 100%;
     height: 40px;
+    cursor: pointer;
 }
 @media screen and (max-width: 1024px){
-    .login-registration{
+    .login_page{
         max-width: 600px;
         width: 100%;
         height: 550px;
+
         display: flex;
         align-content: space-between;
         align-items: center;
