--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -1,8 +1,4 @@
-body{
-    background-color: white;
-    width: 100%;
-    min-width: 320px;
-}
+
 .carrosel{
     position: relative;
     max-width: 1463px;
@@ -77,6 +73,8 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    padding: 0px 10px;
 }
 .title-novidades h2{
     margin: 0px;
@@ -95,6 +93,7 @@ body{
     justify-content: space-around;
     align-items: center;
     gap: 10px;
+    padding: 0px 10px;
 }
 .form-novidades-name{
     max-width: 300px;
