atualização do script do carrossel

--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer" lang="pt-br">
-    <div class="items-footer" style="padding-top: 25px;">
+    <div class="items-footer">
         <div class="coluna-footer-itens inst" id="inst">
             <label for="coluna-footer-itens">
                 <h3>Institucional</h3>
