--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<div class="main" onresize="mostrarItens()">
-    <div class="carrosel">
+<div class="main" onload="mostrarBannerPorra()">
+    <div id="slides" class="carrosel">
         <div data-js="banner-home" class="banner-home nintendo-controle bannerVisibility">
             <img src="/assets/img\nintendo3.jpg" alt="Banner do controle de Super Nintento" width="100%">
         </div>
