--- a/src/app/views/header/header.component.css
+++ b/src/app/views/header/header.component.css
@@ -168,6 +168,7 @@
         align-items: center;
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
+        z-index: 1;
         transition: 0.3s ease-in;
     }
     #menu a{
